fixed button wrap

--- a/client/src/styles/_custom.scss
+++ b/client/src/styles/_custom.scss
@@ -366,6 +366,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 }
 
